--- a/GamersIntel-Client/package.json
+++ b/GamersIntel-Client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.3",
     "firebase": "^12.8.0",
     "lottie-react": "^2.4.1",
     "react": "^19.2.0",
